--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,6 @@
 .container{
     height: calc(100vh - 100px);
-    background-color: #222;
+    background-color: rgb(12, 27, 48);
     display: flex;
     margin-top: 80px;
 }
