--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -83,11 +83,13 @@
 .checkbox{
     width: 20px;
     height: 20px;
+    cursor: pointer;
 }
 
 .quantity{
     width: 50px;
     height: 30px;
+    text-align: center;
 }
 
 .button{
