--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -19,6 +19,7 @@
 
 .item:nth-child(2){
     flex: 3;
+    justify-content: center;
 }
 
 .item:last-child{
@@ -52,6 +53,7 @@
     padding: 0;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     list-style: none;
 }
 
