--- a/styles/OrderDetails.module.css
+++ b/styles/OrderDetails.module.css
@@ -21,6 +21,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
+}
+
+.close{
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    cursor: pointer;
+    position: absolute;
+    top: -10px;
+    right: -10px;
 }
 
 .title{
