--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -58,7 +58,7 @@
 .wrapper{
     width: 90%;
     max-height: 300px;
-    background-color: #333;
+    background-color: #00156d;
     padding: 50px;
     padding-top: 10px;
     display: flex;
